force-app/main/default/objects/NomineeInNominationCategory__c/NomineeInNominationCategory__c.object-meta.xml
<CustomObject>
    <description>Object is created to store relationship between  Nominee and Nomination Category. However each Nominee take part in many Nomination Category, so User should vote for Nominee In Nomination Category.</description>
    <label>Nominee In Nomination Category</label>
    <nameField>
        <label>Nominee In Nomination Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nominees In Nomination Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>