force-app/main/default/objects/NomineeInNominationCategory__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is created to show has the Nominee successfully passed approval process.</description>
    <inlineHelpText>Field is created to show has the Nominee successfully passed approval process.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>