force-app/main/default/objects/NomineeInNominationCategory__c/fields/NominationCategoryId__c.field-meta.xml
<CustomField>
    <fullName>NominationCategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nomination name</description>
    <inlineHelpText>Nomination name</inlineHelpText>
    <label>Nomination Category Id</label>
    <referenceTo>NominationCategory__c</referenceTo>
    <relationshipLabel>Nominees In Nomination Category</relationshipLabel>
    <relationshipName>NomineesInNominationCategory</relationshipName>
    <type>Lookup</type>
</CustomField>