force-app/main/default/objects/NomineeInNominationCategory__c/fields/NomineeId__c.field-meta.xml
<CustomField>
    <fullName>NomineeId__c</fullName>
    <description>Person who has successfully passed approval process.</description>
    <inlineHelpText>Person who has successfully passed approval process.</inlineHelpText>
    <label>Nominee Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nominee In Nomination Categories</relationshipLabel>
    <relationshipName>NomineeInNominationCategories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>