force-app/main/default/objects/NomineeInNominationCategory__c/fields/VotesQuantity__c.field-meta.xml
<CustomField>
    <fullName>VotesQuantity__c</fullName>
    <description>How many votes the Nominee has In the Nominator.</description>
    <inlineHelpText>How many votes the Nominee has In the Nominator.</inlineHelpText>
    <label>Votes Quantity</label>
    <summaryForeignKey>Vote__c.NomineeInNominationCategoryId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>